Revision history for {{$dist->name}}

{{$NEXT}}
  - add @Git back in

0.03      2012-07-25 13:04:59 America/New_York
  - self hosting
  - remove git from bundle
  - automatically create remote public
  - fail to release if there is already a tag for this version

0.02      2012-07-25 11:57:01 America/New_York
  - added TODO

0.01      2012-07-25 11:47:41 America/New_York
  - initial version