@@ -7,3 +7,6 @@ copyright_year   = 2012
 version = 0.03
 
 [@ACPS]
+
+[ModuleShareDirs]
+Dist::Zilla::MintingProfile::ACPS = profiles
