@@ -1,0 +1,8 @@
+package {{$name}};
+
+use strict;
+use warnings;
+
+# VERSION
+
+1;
