@@ -1,0 +1,24 @@
+[TemplateModule/:DefaultModuleMaker]
+template = Module.pm
+
+[DistINI]
+append_file = plugins.ini
+
+[GatherDir::Template]
+root             = skel
+include_dotfiles = 1
+
+[GenerateFile / Generate-Changes ]
+filename    = Changes
+is_template = 0
+content     = Revision history for {{$dist->name}}
+content     =
+content     = {{$NEXT}}
+
+[Git::Init]
+commit_message = initial commit  ; this is the default
+remote = cm acpsdev2.gsfc.nasa.gov:/cm/git/acps/%N
+remote = public acpsdev2.gsfc.nasa.gov:public_git/%N.git
+config = user.email gollis@sesda2.com  ; there is no default
+
+[ACPS::Init]
